--- a/nova/.config/mpv/input.conf
+++ b/nova/.config/mpv/input.conf
@@ -1,3 +1,14 @@
 UP add volume 5
 DOWN add volume -5
 
+j add chapter 1
+k add chapter -1
+s cycle sub
+l cycle audio
+n playlist-next
+p playlist-prev
+
+WHEEL_UP ignore
+WHEEL_DOWN ignore
+WHEEL_LEFT ignore
+WHEEL_RIGHT ignore
