--- a/nova/.config/qutebrowser/qsettings/QtProject.conf
+++ b/nova/.config/qutebrowser/qsettings/QtProject.conf
@@ -1,6 +1,6 @@
 [FileDialog]
-history=file:///home/nova/.config/nvim, file:///home/nova/.config/nvim/lua, file:///home/nova/.config/nvim/lua/lang, file:///home/nova/Downloads
-lastVisited=file:///home/nova/Downloads
+history=file:///home/nova/.config/nvim, file:///home/nova/.config/nvim/lua, file:///home/nova/.config/nvim/lua/lang, file:///home/nova/Downloads, file:///home/nova/.config/emacs-temp
+lastVisited=file:///home/nova/.config/emacs-temp
 qtVersion=6.9.2
 shortcuts=file:, file:///home/nova
 sidebarWidth=96
