updated rofi scripts

--- a/nova/.config/ranger/rc.conf
+++ b/nova/.config/ranger/rc.conf
@@ -350,6 +350,8 @@ map     Q quitall
 map     q quit
 copymap q ZZ ZQ
 
+map yc shell wl-copy < %f
+
 map R     reload_cwd
 map F     set freeze_files!
 map <C-r> reset
