--- a/nova/.config/kitty/kitty.conf
+++ b/nova/.config/kitty/kitty.conf
@@ -4,8 +4,12 @@ font_family IosevkaTerm Nerd Font
 background_opacity 0.9
 dynamic_background_opacity yes
 window_padding_width 4
+enable_audio_bell no
+
+strip_trailing_newline yes
 
 # BEGIN_KITTY_THEME
 # Yorumi Abyss
 include current-theme.conf
 # END_KITTY_THEME
+
