--- a/nova/.config/swayidle/config
+++ b/nova/.config/swayidle/config
@@ -1,4 +1,4 @@
 timeout 300 'swaylock --screenshots --effect-blur 10x5 --clock'
-timeout 600 'systemctl suspend'
+timeout 600 'systemctl suspend-then-hibernate'
 before-sleep 'swaylock --screenshots --effect-blur 10x5 --clock'
 after-resume 'swaylock --screenshots --effect-blur 10x5 --clock'
