--- a/nova/.config/swaync/config.json
+++ b/nova/.config/swaync/config.json
@@ -27,6 +27,8 @@
   "hide-on-clear": true,
   "hide-on-action": true,
   "script-fail-notify": true,
+  "notification-replace": true,
+
 
   "widgets": [
     "title",
