--- a/nova/.config/ghostty/config
+++ b/nova/.config/ghostty/config
@@ -1,44 +1,55 @@
+# Shell Configuration
 shell-integration = zsh
 term = kitty
 
-font-family = JetBrainsMono Nerd Font Mono
+# Font Settings
+font-family = IosevkaTerm Nerd Font
 font-size = 13
+font-style = SemiBold
+font-style-bold = ExtraBold
 
-#theme = my_custom 
-theme = Builtin Pastel Dark
+# Theme and Appearance
+theme = yourumi-abbys
+# theme = /home/nova/.cache/wal/colors-ghostty
 background-opacity = 0.8
+
+# Window Settings
 window-padding-x = 5
-# window-padding-y = 5
 window-decoration = none
+window-save-state = always
+
+# GTK Settings
 gtk-titlebar = false
 gtk-tabs-location = hidden
 adw-toolbar-style = flat
 
+# Behavior
 confirm-close-surface = false
-
 mouse-hide-while-typing = true
 
-window-save-state = always
-
 # Keybindings
-
+# Config Management
 keybind = ctrl+a>r=reload_config
 
+# Window/Surface Management
 keybind = ctrl+a>x=close_surface
 
+# Split Creation
 keybind = ctrl+a>h=new_split:left
 keybind = ctrl+a>j=new_split:down
 keybind = ctrl+a>k=new_split:up
 keybind = ctrl+a>l=new_split:right
 keybind = ctrl+a>f=toggle_split_zoom
 
+# Split Navigation
 keybind = ctrl+a>ctrl+h=goto_split:left
 keybind = ctrl+a>ctrl+j=goto_split:bottom
 keybind = ctrl+a>ctrl+k=goto_split:top
 keybind = ctrl+a>ctrl+l=goto_split:right
 
+# Scrolling
 keybind = ctrl+a>g=scroll_to_top
 keybind = ctrl+a>G=scroll_to_bottom
 
+# Terminal Control
 # keybind = ctrl+l=clear_screen
-
