--- a/nova/.config/xdg-desktop-portal/portals.conf
+++ b/nova/.config/xdg-desktop-portal/portals.conf
@@ -1,3 +1,7 @@
 [preferred]
-default=gtk;gnome
+default=luminous;gtk
+org.freedesktop.impl.portal.Screenshot=luminous
+org.freedesktop.impl.portal.ScreenCast=luminous
+org.freedesktop.impl.portal.RemoteDesktop=luminous
+org.freedesktop.impl.portal.Settings=luminous
 org.freedesktop.impl.portal.FileChooser=gtk
