--- a/nova/.tmux.conf
+++ b/nova/.tmux.conf
@@ -2,7 +2,7 @@ unbind C-b
 set-option -g prefix C-x
 bind-key C-x send-prefix
 
-set -g default-terminal "tmux-256color"
+# set -g default-terminal "tmux-256color"
 set-option -g mouse on
 setw -g mode-keys vi
 set -g base-index 1
