--- a/system/package/development.yaml
+++ b/system/package/development.yaml
@@ -1,33 +1,46 @@
-- lazygit
+# Build Tools
 - pkgconf
+- meson
+- cmake
+
+# Package Managers
 - python-pipx
 
+# Lua
 - lua
 - luarocks
-- meson
 
+# JavaScript/Node.js
 - nodejs
-- jdk
 - npm
 
+# Java
+# - jdk
+
+# Rust
 - rustup
 - rust-analyzer
 
+# Go
 - go
 
+# Python Tools
 - uv
 - pyright
-- tree-sitter
 - python-pynvim
 - python-ruff
 - python-lsp-server
 - python-pyflakes
+
+# Parser
+- tree-sitter
+
+# Shell Tools
 - shfmt
 - shellcheck
 
+# Code Formatters
 - prettier
 
-- python-pynvim
-- pandoc-cli
-
+# AI/LLM
 - ollama-cuda
