--- a/nova/.config/hypr/configs/binds.conf
+++ b/nova/.config/hypr/configs/binds.conf
@@ -19,9 +19,9 @@ bind = , XF86PowerOff, exec, systemctl suspend
 # ============================
 # Application Launchers
 # ============================
-bind = SUPER, Return, exec, kitty -e ~/.dotfiles/scripts/start_tmux.sh
-bind = SUPER, Space, exec, kitty
-bind = SUPER, E, exec, kitty -e ranger 
+bind = SUPER, Return, exec, ghostty -e ~/.dotfiles/scripts/start_tmux.sh
+bind = SUPER, Space, exec, ghostty
+bind = SUPER, E, exec, yazi 
 bind = SUPER, D, exec, rofi -show drun -theme launchpad
 bind = SUPER, S, exec, ~/.config/rofi/web_search.sh
 bind = SUPER, B, exec, ~/.config/rofi/bookmarks.sh
