--- a/nova/.config/hypr/configs/visual.conf
+++ b/nova/.config/hypr/configs/visual.conf
@@ -20,7 +20,7 @@ general {
     border_size = 2
     col.active_border = $activebordercolor 
     col.inactive_border = $inactivebordercolor
-    layout = scrolling
+    layout = master 
     snap {
         enabled = true
         window_gap = 5
