--- a/nova/.tmux.conf
+++ b/nova/.tmux.conf
@@ -1,45 +1,62 @@
+# set-option -g default-shell /usr/bin/zsh
+# =============================================================================
+# PREFIX KEY
+# =============================================================================
 unbind C-b
 set-option -g prefix C-x
 bind-key C-x send-prefix
 
-# set -g default-terminal "tmux-256color"
+# =============================================================================
+# GENERAL SETTINGS
+# =============================================================================
+set -g default-terminal "tmux-256color"
 set-option -g mouse on
 setw -g mode-keys vi
 set -g base-index 1
 set -g renumber-windows on
 set -g status-position top
+set -g allow-passthrough on
+set -ga terminal-overrides ',xterm*:Ss=\E[%p1%d q:Se=\E[2 q:smcup@:rmcup@'
 
+# =============================================================================
+# NAVIGATION
+# =============================================================================
 bind-key M-Left select-pane -L
 bind-key M-Right select-pane -R
 bind-key M-Up select-pane -U
 bind-key M-Down select-pane -D
 
+# Clear screen binding
 bind-key -n C-l send-keys C-l
 
+# =============================================================================
+# WINDOW & PANE MANAGEMENT
+# =============================================================================
 bind-key x kill-pane
 bind-key X kill-window
 
-# Source .tmux.conf as suggested in `man tmux`
-bind R source-file '/home/nova/.tmux.conf'
+# Reload config
+bind R source-file '/home/nova/.tmux.conf' \; refresh-client
 
+# =============================================================================
+# COPY MODE
+# =============================================================================
 # Copy to system clipboard using wl-copy (Wayland)
 bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "wl-copy"
 
-# Plugins
-set -g @plugin 'b0o/tmux-autoreload'
-
-# Theme
-set -g @plugin "janoamaral/tokyo-night-tmux"
-set -g @tokyo-night-tmux_transparent 1
-
-set -ga terminal-overrides ',xterm*:smcup@:rmcup@'
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-set -g @plugin 'tmux-plugins/tpm'
-
-run '~/.tmux/plugins/tpm/tpm'
-
-# set -g status off
+# =============================================================================
+# STATUS BAR
+# =============================================================================
 bind b set-option status
-set -g status-format[1] ''
-set-hook -g window-pane-changed 'display-message "Command changed to: #{pane_current_command}"'
+# Main status bar: very transparent grey
+set -g status-style bg=default,fg=white
+# Left side empty
+set -g status-left ""
+set -g status-left-length 100
+# Right section: unchanged
+set -g status-right " #{?client_prefix,#[fg=black bg=blue bold] PREFIX ,}#[fg=yellow,bg=colour235] #{?#{!=:#{pane_mode},},#{pane_mode},NORMAL} #[bg=default] #[fg=cyan,bg=colour235] #{session_name} "
+# Window List
+set -g status-right-length 80
+set -g status-justify left
+set -g window-status-format "#[fg=white,bg=colour238] #I:#W #[bg=default]"
+set -g window-status-current-format "#[fg=black,bg=colour67,bold] #I:#W #[bg=default]"
