--- a/nova/.tmux.conf
+++ b/nova/.tmux.conf
@@ -3,8 +3,8 @@
 # PREFIX KEY
 # =============================================================================
 unbind C-b
-set-option -g prefix C-x
-bind-key C-x send-prefix
+set-option -g prefix `
+bind-key ` send-prefix
 
 # =============================================================================
 # GENERAL SETTINGS
@@ -16,15 +16,17 @@ set -g base-index 1
 set -g renumber-windows on
 set -g status-position top
 set -g allow-passthrough on
-set -ga terminal-overrides ',xterm*:Ss=\E[%p1%d q:Se=\E[2 q:smcup@:rmcup@'
+set -g escape-time 0
+set -g repeat-time 1000
+set -ga terminal-overrides ',*:RGB q:smcup@:rmcup@'
 
 # =============================================================================
 # NAVIGATION
 # =============================================================================
-bind-key M-Left select-pane -L
-bind-key M-Right select-pane -R
-bind-key M-Up select-pane -U
-bind-key M-Down select-pane -D
+bind-key H select-pane -L
+bind-key L select-pane -R
+bind-key K select-pane -U
+bind-key J select-pane -D
 
 # Clear screen binding
 bind-key -n C-l send-keys C-l
@@ -36,13 +38,20 @@ bind-key x kill-pane
 bind-key X kill-window
 
 # Reload config
-bind R source-file '/home/nova/.tmux.conf' \; refresh-client
+bind R source-file '$HOME/.tmux.conf' \; refresh-client
 
 # =============================================================================
 # COPY MODE
 # =============================================================================
 # Copy to system clipboard using wl-copy (Wayland)
 bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "wl-copy"
+
+# =============================================================================
+# PANE & BORDER 
+# =============================================================================
+
+set -g pane-border-lines simple
+set -g pane-border-style fg=black,bright
 
 # =============================================================================
 # STATUS BAR
