--- a/nova/.config/yazi/keymap.toml
+++ b/nova/.config/yazi/keymap.toml
@@ -1,58 +1,62 @@
 
 # MOUNT MENU
 [[mgr.prepend_keymap]]
-on  = "M"
+on = "M"
 run = "plugin mount"
 
 
 # SMART FILTER
 [[mgr.prepend_keymap]]
-on   = "F"
-run  = "plugin smart-filter"
+on = "F"
+run = "plugin smart-filter"
 desc = "Smart filter"
 
 
 # SMART PASTE
 [[mgr.prepend_keymap]]
-on   = "p"
-run  = "plugin smart-paste"
+on = "p"
+run = "plugin smart-paste"
 desc = "Paste into the hovered directory or CWD"
 
 
 # TOGGLE PANES
 [[mgr.prepend_keymap]]
-on   = "T"
-run  = "plugin toggle-pane min-preview"
+on = "T"
+run = "plugin toggle-pane min-preview"
 desc = "Show or hide the preview pane"
 
 [[mgr.prepend_keymap]]
-on   = "T"
-run  = "plugin toggle-pane max-preview"
+on = "T"
+run = "plugin toggle-pane max-preview"
 desc = "Maximize or restore the preview pane"
 
 [[mgr.prepend_keymap]]
-on   = "P"
-run  = "plugin toggle-pane min-parent"
+on = "P"
+run = "plugin toggle-pane min-parent"
 desc = "Show or hide the preview pane"
 
 [[mgr.prepend_keymap]]
-on   = "P"
-run  = "plugin toggle-pane min-parent"
+on = "P"
+run = "plugin toggle-pane min-parent"
 desc = "Maximize or restore the preview pane"
 
 [[mgr.prepend_keymap]]
-on   = "R"
-run  = "plugin toggle-pane reset"
+on = "R"
+run = "plugin toggle-pane reset"
 desc = "Maximize or restore the preview pane"
 
+[[mgr.prepend_keymap]]
+on = "<C-y>"
+run = ['shell -- dragon-drop "$@" & disown']
+desc = "Drag selected files (Wayland)"
 
 # ZOOM
 [[mgr.prepend_keymap]]
-on   = "+"
-run  = "plugin zoom 1"
+on = "+"
+run = "plugin zoom 1"
 desc = "Zoom in hovered file"
 
 [[mgr.prepend_keymap]]
-on   = "-"
-run  = "plugin zoom -1"
+on = "-"
+run = "plugin zoom -1"
 desc = "Zoom out hovered file"
