--- a/system/package/manual-install.yaml
+++ b/system/package/manual-install.yaml
@@ -1,4 +1,6 @@
-- brave-bin
-- terminus-font
-- mako
-- dragon-drop
+- castnow-git
+- mysql
+- zoom
+- xdg-desktop-portal-gnome
+- gnome-shell
+- gnome-control-center
