--- a/nova/.config/xdg-desktop-portal/portals.conf
+++ b/nova/.config/xdg-desktop-portal/portals.conf
@@ -1,7 +1,7 @@
 [preferred]
-default=luminous;gtk
-org.freedesktop.impl.portal.Screenshot=luminous
-org.freedesktop.impl.portal.ScreenCast=luminous
-org.freedesktop.impl.portal.RemoteDesktop=luminous
-org.freedesktop.impl.portal.Settings=luminous
-org.freedesktop.impl.portal.FileChooser=gtk
+default=gnome;gtk
+org.freedesktop.impl.portal.Screenshot=gnome
+org.freedesktop.impl.portal.ScreenCast=gnome
+org.freedesktop.impl.portal.RemoteDesktop=gnome
+org.freedesktop.impl.portal.Settings=gnome
+org.freedesktop.impl.portal.FileChooser=gnome
