--- a/nova/.config/winapps/winapps.conf
+++ b/nova/.config/winapps/winapps.conf
@@ -50,7 +50,7 @@ RDP_SCALE="100"
 # [ADDITIONAL FREERDP FLAGS & ARGUMENTS]
 # DEFAULT VALUE: '/cert:tofu /sound /microphone'
 # VALID VALUES: See https://github.com/awakecoding/FreeRDP-Manuals/blob/master/User/FreeRDP-User-Manual.markdown
-RDP_FLAGS="/sound /microphone /cert:tofu /clipboard /sec:tls +span +home-drive"
+RDP_FLAGS="/cert:tofu  /sec:tls /sound /microphone /clipboard +home-drive +f  /dvc:urbdrc"
 
 # [MULTIPLE MONITORS]
 # NOTES:
