--- a/system/package/manual-install.yaml
+++ b/system/package/manual-install.yaml
@@ -1,14 +1,13 @@
-- castnow-git
-- mysql
+- kdeconnect
+- antigravity-bin
+- google-chrome
+- tree
+- wf-recorder
+- gemini-cli
+- freerdp-git
+- v4l2loopback-dkms
 - zoom
-- xdg-desktop-portal-gnome
-- gnome-shell
-- gnome-control-center
-- espeak-ng
-- postgresql
-- pgvector
-- distrobox
-- docker
-- docker-compose
-- opencode
-- flatpak
+- onlyoffice
+- libreoffice
+- anydesk-bin
+- emacs-wayland
