--- a/nova/.tmux.conf
+++ b/nova/.tmux.conf
@@ -9,7 +9,7 @@ bind-key ` send-prefix
 # =============================================================================
 # GENERAL SETTINGS
 # =============================================================================
-set -g default-terminal "tmux-256color"
+set-option -g default-terminal "xterm-256color"
 set-option -g mouse on
 setw -g mode-keys vi
 set -g base-index 1
