--- a/system/package/manual-install.yaml
+++ b/system/package/manual-install.yaml
@@ -1,15 +1,2 @@
-- kdeconnect
-- antigravity-bin
-- google-chrome
-- tree
-- wf-recorder
-- gemini-cli
-- zoom
-- libreoffice
-- anydesk-bin
-- git-filter-repo
-- zen-browser-bin
-- potrace
-- dbeaver
-- tlp-rdw
-- tlp-pd
+- cloudflared
+- gparted
