--- a/system/package/work.yaml
+++ b/system/package/work.yaml
@@ -10,6 +10,13 @@
 - pgvector
 - antigravity-bin
 - google-chrome
+- libreoffice
+- anydesk-bin
+- antigravity-bin
+- google-chrome
+- gemini-cli
 - zoom
 - libreoffice
 - anydesk-bin
+- cursor-bin
+- zapzap # Whatsapp
