--- a/system/package/gaming.yaml
+++ b/system/package/gaming.yaml
@@ -1,21 +1,21 @@
-- gnutls
-- lib32-gnutls
-- lib32-libldap
-- lib32-libxml2
-- lib32-freetype2
-- lib32-sdl2-compat
-
-- lib32-mpg123
-- lib32-openal
-- lib32-alsa-plugins
-- lib32-libpulse
-- libvdpau
-- lib32-libvdpau
-- libva
-- lib32-libva
-- lib32-vulkan-icd-loader
-- dxvk-mingw-git
-- vkd3d
-- gamemode
-- gamescope
-- proton-cachyos
+#- gnutls
+#- lib32-gnutls
+#- lib32-libldap
+#- lib32-libxml2
+#- lib32-freetype2
+#- lib32-sdl2-compat
+#
+#- lib32-mpg123
+#- lib32-openal
+#- lib32-alsa-plugins
+#- lib32-libpulse
+#- libvdpau
+#- lib32-libvdpau
+#- libva
+#- lib32-libva
+#- lib32-vulkan-icd-loader
+#- dxvk-mingw-git
+#- vkd3d
+#- gamemode
+#- gamescope
+#- proton-cachyos
