--- a/system/package/internet.yaml
+++ b/system/package/internet.yaml
@@ -1,5 +1,7 @@
 - python-adblock
 - qutebrowser
-- mullvad-browser-bin
 - telegram-desktop
 - zen-browser-bin
+- kdeconnect
+- cloudflared
+- localsend
