--- a/system/package/work.yaml
+++ b/system/package/work.yaml
@@ -1,6 +1,3 @@
-- readline
-- base-devel
-- openssl
 - jdk-openjdk
 - espeak-ng
 - docker
@@ -10,13 +7,9 @@
 - pgvector
 - antigravity-bin
 - google-chrome
-- libreoffice
-- anydesk-bin
-- antigravity-bin
-- google-chrome
 - gemini-cli
 - zoom
-- libreoffice
-- anydesk-bin
 - cursor-bin
 - zapzap # Whatsapp
+- wps-office
+- ttf-wps-fonts
