--- a/nova/.config/qutebrowser/autoconfig.yml
+++ b/nova/.config/qutebrowser/autoconfig.yml
@@ -6,5 +6,6 @@
 
 config_version: 2
 settings:
-  downloads.open_dispatcher:
-    global: aria2p add {url}
+  colors.webpage.darkmode.enabled:
+    '*://germany.eecglobal.com/*': true
+    '*://www.perplexity.ai/*': true
