--- a/nova/.config/qutebrowser_work/config/autoconfig.yml
+++ b/nova/.config/qutebrowser_work/config/autoconfig.yml
@@ -6,5 +6,7 @@
 
 config_version: 2
 settings:
-  content.notifications.enabled:
-    https://web.whatsapp.com: true
+  colors.webpage.darkmode.enabled:
+    '*://localhost:3000/*': false
+  content.media.audio_capture:
+    http://localhost:3000: true
