--- a/nova/.config/qutebrowser/autoconfig.yml
+++ b/nova/.config/qutebrowser/autoconfig.yml
@@ -6,6 +6,5 @@
 
 config_version: 2
 settings:
-  colors.webpage.darkmode.enabled:
-    '*://germany.eecglobal.com/*': true
-    '*://www.perplexity.ai/*': true
+  tabs.position:
+    global: top
